# Embodied.cpp

./: .gitignore  CMakeLists.txt  HY_VLA_PORT_PLAN.md  HY_VLA_PROGRESS.md  LICENSE  LINGBOT_VA_PORT_PLAN.md  LINGBOT_VA_PROGRESS.md  README.md  SECURITY.md
adapter/: README.md  __init__.py  adapter.cpp  adapter.h  pipeline.py  typed_io.h  typed_io.py
adapter/sim/: __init__.py  libero.py  robolab.py  robotwin.py
artifacts/lingbot_va_onnx/: LINGBOT_VA_ONNX_AUDIT.md
artifacts/model_graphs/: GRAPH_SPEC.md  README.md  lingbot_va_module_dag.md  vla_vs_world_action.md
artifacts/model_graphs/block/: gr00t_n1d7_block_graph.md  hy_vla_block_graph.md  lingbot_va_block_graph.md  openvla_block_graph.md  pi05_openpi_block_graph.md  pi0_openpi_block_graph.md
artifacts/model_graphs/operator/: README.md
ci/agent/: vla_ctl.proto
eval/: README.md  collect_libero_results.py  run_libero.sh  run_libero_client.sh  run_robotwin_hy_vla_client.sh
eval/client/: adapters.py  benchmark.py  compare_benchmarks.py  lingbot_world_client.py  run_libero_eval.py  run_robolab_eval.py  run_robotwin_eval.py  run_robotwin_eval_simple.py  run_robotwin_native_hy_vla.py  run_sim_client_direct.py  vla_cpp_client.py
eval/conf/: README.md  libero_groot_n1_eval.yaml  libero_pi05_eval.yaml  robolab_cosmos3_eval.yaml
eval/sim/: INSTALL_NOTES.md  __init__.py
eval/sim/libero/: __init__.py  libero_env.py  setup_libero.sh
eval/sim/robolab/: .gitignore  README.md  setup_robolab.sh
eval/sim/robotwin/: README.md  setup_robotwin.sh
eval/sim/simpler/: setup_SimplerEnv.sh
eval/utils/: service.py
eval/utils/sim_adapters/: base.py  libero.py  robotwin.py
examples/chat/: README.md
kernels/cosmos3/: README.md  cosmos3_action_bridge_cuda.cu  cosmos3_action_bridge_cuda.h  cosmos3_mot_action_cuda.cu  cosmos3_mot_action_cuda.h  cosmos3_qwen_language_cuda.cu  cosmos3_qwen_language_cuda.h  cosmos3_qwen_visual_cuda.cu  cosmos3_qwen_visual_cuda.h  cosmos3_w8_marlin_cuda.cu  cosmos3_w8_marlin_cuda.h  cosmos3_wan_vae_cuda.cu  cosmos3_wan_vae_cuda.h
kernels/lingbot/: lingbot_flex_attn_cuda.cu  lingbot_flex_attn_cuda.h
models/: cosmos3.cpp  groot_n1.cpp  hy_vla.cpp  lingbot_va.cpp  lingbot_va_original.cpp  pi05.cpp
patches/: PATCH.md  init_third_party.sh  llama.cpp-cuda-parity.patch  llama.cpp-groot-n1.patch  llama.cpp-pi05.patch  llama.cpp-vla.patch
runtime/: arch.h  model.cpp  model.h
scripts/: check_lingbot_va_flow_scheduler.py  check_lingbot_va_grid_rope.py  check_lingbot_va_rope.py  compare_f32_tensors.py  convert_cosmos3_full_w8_to_gguf.py  convert_groot_n1_to_gguf.py  convert_hy_vla_to_gguf.py  convert_lingbot_va_to_gguf.py  convert_pi05_mmproj_to_gguf.py  convert_pi05_to_gguf.py  dump_lingbot_va_spec.py  export_lingbot_va_onnx_audit.py  export_openpi_pi0_full_onnx.py  export_openpi_pi0_original_random_onnx.py  inspect_hy_vla_frontend.py  inspect_hy_vla_vision_weights.py  inspect_hy_vla_weights.py  inspect_lingbot_va_weights.py  prepare_groot_n1_backbone.py  quantize_hy_vla_gguf.py  quantize_lingbot_wan_gguf.py  run_hy_vla_joint_parity.py  run_hy_vla_mem_vision_reference.py  run_hy_vla_prefix_parity.py  run_hy_vla_reference.py  run_hy_vla_routed_joint_reference.py  run_hy_vla_routed_prefix_reference.py  run_hy_vla_vision_cpp_debug.py  run_hy_vla_vision_reference.py  run_lingbot_va_e2e_parity.py  run_lingbot_va_oneblock_parity.py  run_overnight_lingbot_libero.sh  smoke_hy_vla_server_precomputed.py
serving/: lingbot-world-server.cpp  lingbot.proto  server.cpp  vla.proto  vlm-server.cpp  wam-server.cpp  wam.proto
tools/: hy_vla_direct_debug.cpp
